--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
              <a-plane width="4" height="4" position='0 0 0' rotation="-90 0 0" color="white">
              </a-plane>
         </a-marker>
-        a-marker type="barcode" value=24>
+        <a-marker type="barcode" value=24>
              <a-plane width="4" height="4" position='0 0 0' rotation="-90 0 0" color="yellow">
              </a-plane>
         </a-marker>
