--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
     <title>Jadwal Terkini</title>
-    <script src="./library/aframe.min.js"></script>
+    <script src="library/aframe.min.js"></script>
     <!-- include aframe-ar.js -->
-    <script src="./library/aframe-ar.js"></script>
+    <script src="library/aframe-ar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 </head>
 
